# linejudge

./: .gitignore  CHANGELOG.md  README.md  TODO.html  pyproject.toml
.github/workflows/: ci.yml
docs/: PROOF-sample.md  adapter-guide.md  comparison.md  governance-templates.md  quickstart.md  verifier-spec.md
docs/adr/: ADR-0001-lineage-and-open-core.md
docs/launch/: blog-post.md  show-hn.md  x-thread.md
goals/examples/: hello.md
learnings/: 20260720-235940-issue-479-operationalerror-cannot-vacuum-from-with.md  20260721-000429-issue-588-table-get-column-value-option-for-retrie.md
proofs/: README.md  demo.py  generate.py  stats.py
proofs/fixtures/: issues.json
runs/: ledger-rehearsal.jsonl
runs/20260720-235940-issue-479-operationalerror-cannot-vacuum-from-with/: cleanup.json  outcome.json  prompt.md  run_cost.json  summary.md  verdict.json  write_diff.patch
runs/20260721-000429-issue-588-table-get-column-value-option-for-retrie/: cleanup.json  outcome.json  prompt.md  run_cost.json  summary.md  verdict.json  write_diff.patch
src/linejudge/: __init__.py  cli.py  goal.py  guard.py  learn.py  ledger.py  prompts.py  redact.py  runner.py  verify.py  worktree.py
src/linejudge/adapters/: __init__.py  base.py  claude_code.py  mock.py
src/linejudge/dashboard/: __init__.py  index.html  server.py
tests/: test_adapters.py  test_dashboard.py  test_goal.py  test_learn.py  test_proofs.py  test_redact.py  test_runner.py  test_smoke.py  test_verify.py  test_worktree.py
